first pass implementing mobile support for  project tool list; fixed overflow to only appear on hover across the ui; reduced height of navbar.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -10,12 +10,17 @@ body {
 .content-container {
   display: flex;
   width: 100%;
-  margin-top: 80px;
-  height: calc(100vh - 80px);
+  margin-top: 63px;
+  height: calc(100vh - 63px);
 }
 
 .left-panel-container {
   width: 100%;
+  overflow-y: hidden;
+  scrollbar-gutter: stable;
+}
+
+.left-panel-container:hover {
   overflow-y: auto;
 }
 
@@ -106,8 +111,12 @@ a {
   position: relative;
   font-size: 14px;
   width: 100%;
+  overflow-y: hidden;
+  scrollbar-gutter: stable;
+}
+
+.timeline-container:hover {
   overflow-y: auto;
-  bottom: 5px;
 }
 
 .milestone-container {
@@ -195,8 +204,13 @@ a {
   box-shadow: 5px 5px 5px lightgray;
   padding: 10px;
   font-weight: 300;
-  overflow-y: auto;
+  overflow-y: hidden;
   max-height: 125px;
+  scrollbar-gutter: stable;
+}
+
+.callout:hover {
+  overflow-y: auto;
 }
 
 .callout-title {
@@ -213,7 +227,7 @@ a {
 }
 
 .callout-title-container {
-
+  /* overflow-y: hidden; */
 }
 
 .resume-download-a {
@@ -371,6 +385,11 @@ a {
   padding-right: 5px;
   padding-top: 5px;
   height: 125px;
+  overflow-y: hidden;
+  scrollbar-gutter: stable;
+}
+
+.project-desc:hover {
   overflow-y: auto;
 }
 
@@ -686,7 +705,15 @@ a {
     overflow-y: visible;
   }
 
+  .timeline-container:hover {
+    overflow-y: visible;
+  }
+
   .left-panel-container {
+    overflow-y: visible;
+  }
+
+  .left-panel-container:hover {
     overflow-y: visible;
   }
 }
